# swagger/swagger.json
@@ -920,7 +920,7 @@
                         "name": "request",
                         "in": "body",
                         "schema": {
-                            "$ref": "#/definitions/query.ReqAudioCommentList"
+                            "$ref": "#/definitions/query.ReqAudioComments"
                         }
                     }
                 ],
@@ -1321,7 +1321,7 @@
                         "ApiKeyAuth,OAuth2Implicit": []
                     }
                 ],
-                "description": "声恋投稿",
+                "description": "评论举报",
                 "consumes": [
                     "application/json"
                 ],
@@ -1329,9 +1329,9 @@
                     "application/json"
                 ],
                 "tags": [
-                    "Report"
+                    "VoiceLover"
                 ],
-                "summary": "声恋投稿",
+                "summary": "评论举报",
                 "parameters": [
                     {
                         "description": "request",
@@ -1347,6 +1347,82 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/pb.CommonResp"
+                        }
+                    }
+                }
+            }
+        },
+        "/go/func/voice_lover/shareAlbum": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth,OAuth2Implicit": []
+                    }
+                ],
+                "description": "专辑分享接口",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "VoiceLover"
+                ],
+                "summary": "专辑分享接口",
+                "parameters": [
+                    {
+                        "description": "request",
+                        "name": "request",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/query.ReqShareAlbum"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/pb.RespShareInfo"
+                        }
+                    }
+                }
+            }
+        },
+        "/go/func/voice_lover/shareAudio": {
+            "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth,OAuth2Implicit": []
+                    }
+                ],
+                "description": "音频分享接口",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "VoiceLover"
+                ],
+                "summary": "音频分享接口",
+                "parameters": [
+                    {
+                        "description": "request",
+                        "name": "request",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/query.ReqShareAudio"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/pb.RespShareInfo"
                         }
                     }
                 }
@@ -2251,6 +2327,20 @@
                 }
             }
         },
+        "pb.RespShareInfo": {
+            "type": "object",
+            "properties": {
+                "data": {
+                    "$ref": "#/definitions/pb.ShareData"
+                },
+                "msg": {
+                    "type": "string"
+                },
+                "success": {
+                    "type": "boolean"
+                }
+            }
+        },
         "pb.RespVoiceLoverMain": {
             "type": "object",
             "properties": {
@@ -2273,6 +2363,23 @@
                 },
                 "success": {
                     "type": "boolean"
+                }
+            }
+        },
+        "pb.ShareData": {
+            "type": "object",
+            "properties": {
+                "share_desc": {
+                    "type": "string"
+                },
+                "share_icon": {
+                    "type": "string"
+                },
+                "share_title": {
+                    "type": "string"
+                },
+                "share_url": {
+                    "type": "string"
                 }
             }
         },
@@ -2711,7 +2818,7 @@
                 }
             }
         },
-        "query.ReqAudioCommentList": {
+        "query.ReqAudioComments": {
             "type": "object",
             "properties": {
                 "audioId": {
@@ -2724,6 +2831,10 @@
                 },
                 "page": {
                     "description": "第几页, 范围[1,10]",
+                    "type": "integer"
+                },
+                "type": {
+                    "description": "0-普通评论 1-弹幕",
                     "type": "integer"
                 }
             }
@@ -2832,6 +2943,24 @@
                 },
                 "page": {
                     "description": "第几页, 范围[1,10]",
+                    "type": "integer"
+                }
+            }
+        },
+        "query.ReqShareAlbum": {
+            "type": "object",
+            "properties": {
+                "albumId": {
+                    "description": "专辑id",
+                    "type": "integer"
+                }
+            }
+        },
+        "query.ReqShareAudio": {
+            "type": "object",
+            "properties": {
+                "audioId": {
+                    "description": "音频id",
                     "type": "integer"
                 }
             }
